[gd_scene load_steps=5 format=3 uid="uid://dus288tcjq5gh"]

[ext_resource type="Theme" uid="uid://yjlloxuxuglv" path="res://mixer/channel/channel_theme.tres" id="1_5egym"]
[ext_resource type="Script" uid="uid://c0ynobyxh4d8q" path="res://mixer/channel/new_channel.gd" id="1_im4bs"]
[ext_resource type="LabelSettings" uid="uid://be4xqm441ll6q" path="res://mixer/channel/info_label_settings.tres" id="2_87fmu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4cpti"]

[node name="NewChannel" type="PanelContainer"]
custom_minimum_size = Vector2(120, 500)
offset_right = 144.0
offset_bottom = 1079.0
size_flags_horizontal = 0
theme = ExtResource("1_5egym")
script = ExtResource("1_im4bs")

[node name="HoverDetection" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4cpti")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4cpti")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="DropPrompt" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Drop new
sounds here"
label_settings = ExtResource("2_87fmu")
horizontal_alignment = 1

[node name="OrLabel" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.415686)
layout_mode = 2
text = "OR"
label_settings = ExtResource("2_87fmu")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BrowseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "Browse "

[node name="BrowseDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.wav", "*.mp3", "*.ogg")
use_native_dialog = true
